--- a/styles/style.css
+++ b/styles/style.css
@@ -35,27 +35,110 @@ header {
   display: flex;
   align-items: center;
   gap: 1rem;
+  padding: 0.5rem;
+  text-decoration: none;
 }
 
 .header-h1 {
   font-size: var(--font-size-M);
+  font-weight: 500;
+  color: #000;
 }
 
 .header-icons {
   width: 3.2rem;
-  height: 3rem;
+  height: 2.8rem;
 }
 
-section.section-portada {
+/* section.section-portada {
+  height: 63rem;
+  position: relative;
+  display: flex;
+  justify-content: center;
+} */
+
+.section-portada-wrapper {
   height: 63rem;
   position: relative;
   display: flex;
   justify-content: center;
 }
 
-section.section-portada img {
+.section-portada-div {
   position: absolute;
   width: 100%;
+  height: 100%;
   max-width: 42rem;
   max-height: fit-content;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
+}
+
+.section-portada-img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.section-portada-p {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #fff;
+  background-color: #000;
+  width: 100%;
+  text-align: center;
+  font-size: var(--font-size-L);
+  font-weight: 100;
+}
+
+.section-portada-div.active {
+  opacity: 1;
+}
+
+.section-contenedor-btns {
+  position: absolute;
+  bottom: -4rem;
+  padding: 1rem;
+  display: flex;
+  gap: 0.8rem;
+}
+
+.section-btn {
+  height: 2rem;
+  width: 2rem;
+  border: solid 1px #000;
+  border-radius: 10px;
+}
+
+.section-btn.active-btn {
+  background-color: #000;
+}
+
+.section-btns-nav {
+  position: absolute;
+  top: 45%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 1rem;
+}
+
+.btnsNav {
+  height: 3rem;
+  width: 3rem;
+  background-color: #fff;
+  border-radius: 30px;
+  border: #000000 solid 0.5px;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.btnIcon {
+  width: inherit;
+  height: inherit;
 }
