--- a/styles/categoriaPlantilla.css
+++ b/styles/categoriaPlantilla.css
@@ -68,6 +68,17 @@
   height: 2.4rem;
 }
 
+main {
+  margin-top: 4rem;
+}
+
+.main-h2 {
+  font-size: var(--font-size-M);
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
 @media (max-width: 375px) {
   .filter-btns-container {
     flex-direction: column;
