Funcionalidad para filtrar productos por precio o reseñas terminada

--- a/styles/categoriaPlantilla.css
+++ b/styles/categoriaPlantilla.css
@@ -58,6 +58,11 @@
   cursor: pointer;
 }
 
+.active-filter-btn {
+  background-color: #000;
+  color: #fff;
+}
+
 .filter-icons {
   width: 1.5rem;
   height: 1.5rem;
