Pagina de producto individual terminada y comienzo de pagina de carrito de compra. Pequeña edicion en la barra del menu

--- a/styles/productoIndividual.css
+++ b/styles/productoIndividual.css
@@ -25,6 +25,11 @@
   background-color: whitesmoke;
 }
 
+.active-img {
+  border: #000 solid 1px;
+  background-color: whitesmoke;
+}
+
 .section-description-container {
   margin: 4rem 0;
 }
