--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ body {
   width: 100%;
   background-color: #fff;
   border-left: solid #000 2px;
-  z-index: 1;
+  z-index: 2;
   transform: translateX(100%);
   transition: transform 500ms ease-in-out;
 }
@@ -148,6 +148,10 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: #fff;
 }
 
 .header-logo-container {
@@ -171,11 +175,16 @@ header {
 }
 
 .header-btns-nav {
-  width: 3.2rem;
   height: 2.8rem;
   background: transparent;
   color: #000;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.header-btns-nav span {
+  font-size: var(--font-size-S);
 }
 
 .header-icons {
@@ -279,6 +288,7 @@ section.section-portada {
 
 .contenedor-titulo {
   display: block;
+  position: static;
   margin-bottom: 2rem;
 }
 
